change localization using provider

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -1,5 +1,7 @@
 {
   "appTitle": "إسلامي",
   "suraName": "اسم السورة",
-  "ahadeth": "الأحاديث"
+  "ahadeth": "الأحاديث",
+  "english": "الانجليزية",
+  "arabic": "العربية"
 }
